--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Cason Miller</title>
 </head>
 <body>
+
+    <nav id="Navigation">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Skill Sets</a></li>
+        </ul>
+    </nav>
+
     <h1>Cason Miller's Personal Website'</h1>
+
+
 </body>
 </html>
