--- a/index.html
+++ b/index.html
@@ -16,7 +16,31 @@
         </ul>
     </nav>
 
-    <h1>Cason Miller's Personal Website'</h1>
+    <div id="HomePage">
+        <h1>Cason Miller's Personal Website</h1>
+        <h3>Purpose</h3>
+        <p>The purpose of this website is to serve as Cason Miller's Personal Website in order to showcase everything about him to employers!</p>
+        <img src="C:\Users\cason\Desktop\Pictures\Headshots\headshot.jpg" alt="Professional Headshot" width="200" height="200"/>
+        <h3>Introduction</h3>
+        <p>
+            I am a junior pursuing an undergraduate degree in Management Information Systems (MIS) within the Price College of Business at the University of Oklahoma.
+            I am interested data analysis, business intelligence, and data science.
+            I believe that the skills and information that I have learned from my business relevant classes and previous work experiences have prepared me to take on 
+            more challenges and improve myself through new work opportunities.
+        </p>
+    </div>
+
+    <div id="AboutPage">
+        <h1>About Me</h1>
+    </div>
+
+    <div id="ProjectsPage">
+        <h1>Past Projects</h1>
+    </div>
+
+    <div id="SkillSetsPage">
+        <h1>Skills</h1>
+    </div>
 
 
 </body>
