--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
 <head>
     <meta charset="utf-8" />
     <title>Cason Miller</title>
+    <link rel="stylesheet" href="PersonalWebsiteStyleSheet.css" />
 </head>
 <body>
 
     <nav id="Navigation">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Skill Sets</a></li>
+        <ul id="Links">
+            <li><a href="#HomePage">Home</a></li>
+            <li><a href="#AboutPage">About</a></li>
+            <li><a href="#ProjectsPage">Projects</a></li>
+            <li><a href="#SkillSetsPage">Skill Sets</a></li>
         </ul>
     </nav>
 
-    <div id="HomePage">
+
+    <div name="HomePage" id="HomePage">
         <h1>Cason Miller's Personal Website</h1>
         <h3>Purpose</h3>
-        <p>The purpose of this website is to serve as Cason Miller's Personal Website in order to showcase everything about him to employers!</p>
-        <img src="C:\Users\cason\Desktop\Pictures\Headshots\headshot.jpg" alt="Professional Headshot" width="200" height="200"/>
+        <p>The purpose of this website is to serve as Cason Miller's Personal Website in order to showcase everything about him professionally for HWK 7!</p>
+        <img src="C:\Users\cason\Desktop\Pictures\Headshots\headshot.jpg" alt="Professional Headshot" width="200" height="200" class="center"/>
         <h3>Introduction</h3>
-        <p>
+        <p id="IntroductionInformation">
             I am a junior pursuing an undergraduate degree in Management Information Systems (MIS) within the Price College of Business at the University of Oklahoma.
             I am interested data analysis, business intelligence, and data science.
             I believe that the skills and information that I have learned from my business relevant classes and previous work experiences have prepared me to take on 
@@ -30,16 +32,29 @@
         </p>
     </div>
 
-    <div id="AboutPage">
+    <div name="AboutPage" id="AboutPage">
         <h1>About Me</h1>
+        <p>Please feel free to take a look at my LinkedIn page for more information about me!</p>
+        <a target="_blank" href="https://www.linkedin.com/in/cason-miller/">Cason Miller's LinkedIn</a>
     </div>
 
-    <div id="ProjectsPage">
+    <div name="ProjectsPage" id="ProjectsPage">
         <h1>Past Projects</h1>
+        <ul>
+            <li>Database Project</li>
+            <li>BIA Python Project</li>
+        </ul>
     </div>
 
-    <div id="SkillSetsPage">
+    <div name="SkillSetsPage" id="SkillSetsPage">
         <h1>Skills</h1>
+        <ul>
+            <li>C#</li>
+            <li>Python</li>
+            <li>SQL</li>
+            <li>KNIME</li>
+            <li>Will be certified in Business Intelligence and Analytics after the Summer of 2022</li>
+        </ul>
     </div>
 
 
